[package]
name = "vaultone"
version = "0.1.0"
edition = "2021"
authors = ["5-Wright-Melissa36"]
description = "VaultOne - High-performance Rust+ implementation with async and parallel processing"
license = "MIT"
repository = "https://github.com/5-Wright-Melissa36/vaultone"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
